show stocl on product

--- a/src/assets/styles/user.css
+++ b/src/assets/styles/user.css
@@ -175,6 +175,7 @@ textarea:focus {
   background-color: #f3fbf7;
 }
 .shopBack img {
+  border-radius: 15px;
   width: 100%;
   height: 250px;
   object-fit: contain;
@@ -186,7 +187,7 @@ textarea:focus {
   object-fit: contain;
   border-radius: 10px;
   position: absolute;
-  opacity: 0.4;
+  opacity: 0.1;
 }
 .shopname {
   height: 50px;
@@ -222,6 +223,10 @@ textarea:focus {
   border-radius: 15px;
   color: white;
   box-shadow: 3px 3px 3px grey;
+}
+.shopbutton:hover {
+  background-color: turquoise;
+  color: white;
 }
 .rating {
   margin: 5px 0;
@@ -323,6 +328,11 @@ textarea:focus {
   margin-bottom: 50px;
 }
 .single-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.single-image img {
   background-color: #f3fbf7;
   margin-right: 20px;
   height: 520px;
@@ -331,11 +341,6 @@ textarea:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.single-image img {
-  width: 90%;
-  height: 700px;
-  object-fit: contain;
 }
 .product-name {
   font-size: 25px;
@@ -359,6 +364,7 @@ textarea:focus {
   border-radius: 5px;
   margin-top: 40px;
   border-radius: 15px;
+  padding: 10px;
 }
 .product-count .flex-box {
   padding: 15px 25px;
@@ -390,6 +396,7 @@ textarea:focus {
   font-weight: bold;
   font-size: 15px;
   transition: all 0.5s ease-in-out 0s;
+  margin-top: 20px;
 }
 .round-black-btn:hover,
 .round-black-btn:focus {
@@ -724,11 +731,27 @@ textarea:focus {
 }
 
 .btn-to-product {
+  background-color: white;
+  width: fit-content;
+  padding: 10px 100px;
+  border-radius: 15px;
+  border-color: teal;
+  border-width: 1px;
+  margin: auto;
+  box-shadow: 3px 3px 3px teal;
+  font-weight: bold;
+  color: teal;
+}
+
+.btn-to-product:hover {
   background-color: turquoise;
   width: fit-content;
   padding: 10px 100px;
   border-radius: 15px;
+  border-color: teal;
+  border-width: 1px;
   margin: auto;
-  box-shadow: 3px 3px 3px grey;
+  box-shadow: 3px 3px 3px teal;
   font-weight: bold;
+  color: white;
 }
