--- a/src/App.css
+++ b/src/App.css
@@ -179,11 +179,17 @@ body.offcanvas-active {
   margin-right: auto;
 }
 
+.content-main-custom {
+  padding: 0px 3% 30px 3%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .content-main-full {
   padding: 30px 3%;
   margin-left: auto;
   margin-right: auto;
-  height: 100vh;
+  height: 100%;
 }
 
 .navbar-aside {
